--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
   </head>
 
@@ -12,7 +13,7 @@
       <h1>Zetsy</h1>
       <img src="images/necklace.jpg">
 
-      <h2>About</h3>
+      <h2>About</h2>
       <p>
         Mary Wanesia is a jeweler, an Arizona native, and a member of the Navajo tribe. She specializes in creating beautiful, contemporary takes on the traditional adornments worn by the Navajo in ceremonies and in daily life.
       </p>
@@ -24,10 +25,10 @@
         Mary's jewelry has received recognition and has been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection is sold across the United States and Europe and is carried by the retail stores of Bergdorf Goodman.
       </p>
 
-      <h2>Press</h3>
-      <img src="images/nmai-logo.png">
-      <img src="images/times-logo.png">
-      <img src="images/sedona-logo.png">
+      <h2>Press</h2>
+      <img src="images/nmai-logo.png" class="press">
+      <img src="images/times-logo.png" class="press">
+      <img src="images/sedona-logo.png" class="press">
       <img src="images/bergdorf-logo.png">
 
       <footer>
