--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </p>
 
       <h2>Press</h2>
-      <img src="images/nmai-logo.png" class="press">
-      <img src="images/times-logo.png" class="press">
-      <img src="images/sedona-logo.png" class="press">
-      <img src="images/bergdorf-logo.png">
+      <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="press"></a>
+      <a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" class="press"></a>
+      <a href="http://www.sedonamonthly.com"><img src="images/sedona-logo.png" class="press"></a>
+      <a href="http://www.bergdorfgoodman.com/"><img src="images/bergdorf-logo.png" class="press"></a>
 
       <footer>
         &copy; 2014 Zetsy, All Rights Reserved.
