--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <div class="wrapper">
-      <h1>Zetsy</h1>
+      <header>
+        <h1>Zetsy</h1>
+      </header>
+      
       <img src="images/necklace.jpg">
 
       <h2>About</h2>
