--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <h1>Zetsy</h1>
       </header>
-      
+
       <img src="images/necklace.jpg">
 
       <h2>About</h2>
@@ -28,12 +28,13 @@
         Mary's jewelry has received recognition and has been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection is sold across the United States and Europe and is carried by the retail stores of Bergdorf Goodman.
       </p>
 
-      <h2>Press</h2>
-      <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="press"></a>
-      <a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" class="press"></a>
-      <a href="http://www.sedonamonthly.com"><img src="images/sedona-logo.png" class="press"></a>
-      <a href="http://www.bergdorfgoodman.com/"><img src="images/bergdorf-logo.png" class="press"></a>
-
+      <section id="press">
+        <h2>Press</h2>
+        <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="press"></a>
+        <a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" class="press"></a>
+        <a href="http://www.sedonamonthly.com"><img src="images/sedona-logo.png" class="press"></a>
+        <a href="http://www.bergdorfgoodman.com/"><img src="images/bergdorf-logo.png" class="press"></a>
+      </section>
       <footer>
         &copy; 2014 Zetsy, All Rights Reserved.
       </footer>
